--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,16 @@
   "solidity.defaultCompiler": "remote",
   "solidity.packageDefaultDependenciesContractsDirectory": "src",
   "solidity.packageDefaultDependenciesDirectory": "lib",
-  "solidity.remappings": ["openzeppelin-contracts/=lib/openzeppelin-contracts/"]
+  "editor.formatOnSave": false,
+  "[solidity]": {
+    "editor.defaultFormatter": "JuanBlanco.solidity"
+  },
+  "solidity.formatter": "forge",
+  "solidity.remappings": [
+    "axelar-gmp-sdk-solidity/=lib/axelar-gmp-sdk-solidity/contracts/",
+    "ds-test/=lib/forge-std/lib/ds-test/src/",
+    "forge-std/=lib/forge-std/src/",
+    "forge-gas-snapshot/=lib/forge-gas-snapshot/src/",
+    "openzeppelin-contracts/=lib/openzeppelin-contracts/"
+  ]
 }
