--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,11 @@ docs/
 
 # Dotenv file
 .env
+
+# forge-deploy
+/generated
+/deployments/localhost
+/deployments/31337
+
+# forge-deploy cli binary
+/forge-deploy
