--- a/foundry.toml
+++ b/foundry.toml
@@ -3,6 +3,11 @@ src = 'src'
 out = 'out'
 libs = ['lib']
 
+fs_permissions = [
+	{ access = "read", path = "./deployments"},
+	{ access = "read", path = "./out"}
+]
+
 [fuzz]
 runs = 1
 
