feat: StargateComposer support

--- a/.env.sample
+++ b/.env.sample
@@ -14,6 +14,7 @@ ETHERSCAN_API_KEY=
 ROUTE_PROCESSOR_ADDRESS=
 WETH_ADDRESS=
 STARGATE_ROUTER_ADDRESS=
+STARGATE_COMPOSER_ADDRESS=
 STARGATE_WIDGET_ADDRESS=
 SG_ETH_ADDRESS=
 
