feat: add AxelarAdapter to DeploySushiXSwapV2

--- a/.env.sample
+++ b/.env.sample
@@ -16,5 +16,7 @@ WETH_ADDRESS=
 STARGATE_COMPOSER_ADDRESS=
 STARGATE_WIDGET_ADDRESS=
 SG_ETH_ADDRESS=
+AXELAR_GATEWAY_ADDRESS=
+AXELAR_GAS_SERVICE_ADDRESS=
 
 
