forge install: interfaces
v2.0.5

--- a/.gitmodules
+++ b/.gitmodules
@@ -12,3 +12,6 @@
 	path = lib/openzeppelin-contracts
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts
 	branch = v4.9.0
+[submodule "lib/interfaces"]
+	path = lib/interfaces
+	url = https://github.com/connext/interfaces
